kube/photoprism/photoprism.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: rndir
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: rndir 
  labels:
    app: photoprism
spec:
  selector:
    app: photoprism
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
