kube/photoprism/photoprism-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress
  namespace: rndir
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.org/websocket-services : "photoprism"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      client_max_body_size 20mb;
spec:
  tls:
  - hosts:
    - "photos.rndir.cc"
    secretName: cert-photoprism-rndir-cc
  rules:
  - host: photos.rndir.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism 
            port: 
              number: 80
